fixed overflow problem in stylesheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ header {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
     background-position: center;
-    height: 600px;
+    height: 700px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -110,6 +110,7 @@ header {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    margin-bottom: 20px;
   }
 
     /* secondary page hero */
@@ -393,6 +394,10 @@ header {
   footer h2, footer div {
     text-align: center;
     width: 100%;
+  }
+
+  #hero {
+    height: 100vh;
   }
 
   .hero-cta, .hero-form {
